PZ-23 | License mechanism | Updated copyright notice

--- a/pearl-zip-ui/src/main/resources/contextmenu.fxml
+++ b/pearl-zip-ui/src/main/resources/contextmenu.fxml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.MenuItem?>
-
 <!--
   ~ Copyright (c) ${YEAR} 92AK
   -->
 
+<?import javafx.scene.control.*?>
 <ContextMenu fx:id="ctxMenu" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ntak.pearlzip.ui.pub.ContextMenuController">
   <items>
       <MenuItem fx:id="mnuOpen" mnemonicParsing="false" text="%ctxMenu.open.text" />
