--- a/pearl-zip-ui/src/main/resources/frmOptions.fxml
+++ b/pearl-zip-ui/src/main/resources/frmOptions.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-
 <!--
   ~ Copyright (c) ${YEAR} 92AK
   -->
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.AnchorPane?>
 <AnchorPane prefHeight="415.0" prefWidth="428.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ntak.pearlzip.ui.pub.FrmOptionsController">
    <children>
       <TabPane prefHeight="364.0" prefWidth="428.0" tabClosingPolicy="UNAVAILABLE">
