--- a/pearl-zip-ui/src/main/resources/sysmenu.fxml
+++ b/pearl-zip-ui/src/main/resources/sysmenu.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-
 <!--
   ~ Copyright (c) ${YEAR} 92AK
   -->
 
+<?import javafx.scene.control.*?>
 <MenuBar fx:id="mbarSys" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1" fx:controller="com.ntak.pearlzip.ui.pub.SysMenuController">
   <useSystemMenuBar>true</useSystemMenuBar>
   <menus>
