PZ-109, PZ-120 | TextFX Framework; Options TestFX + Updated comments + Added utility method to set initial file to open for TestFX tests + Added fx:id to Tabs within Options dialog + Implementation of TestFX Unit Test
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-ui/src/main/resources/frmOptions.fxml
+++ b/pearl-zip-ui/src/main/resources/frmOptions.fxml
@@ -20,7 +20,7 @@
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="%options.bootstrap-properties.text">
+            <Tab fx:id="tabBootstrap" text="%options.bootstrap-properties.text">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -34,7 +34,7 @@
                   </AnchorPane>
               </content>
             </Tab>
-            <Tab text="%options.providers.text">
+            <Tab fx:id="tabProviders" text="%options.providers.text">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
