--- a/pearl-zip-ui/src/main/resources/frmNew.fxml
+++ b/pearl-zip-ui/src/main/resources/frmNew.fxml
@@ -7,18 +7,23 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox prefHeight="197.0" prefWidth="316.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ntak.pearlzip.ui.pub.FrmNewController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="272.0" prefWidth="325.0" VBox.vgrow="ALWAYS">
-      <children>
-            <Label layoutX="14.0" layoutY="120.0" text="%new.cmp-format.text" />
-            <ComboBox fx:id="comboArchiveFormat" layoutX="161.0" layoutY="115.0" prefHeight="27.0" prefWidth="98.0" />
-            <Label layoutX="14.0" layoutY="86.0" text="%new.cmp-level.text" />
-            <ComboBox fx:id="comboCmpLevel" layoutX="161.0" layoutY="81.0" prefHeight="27.0" prefWidth="98.0" />
-            <Button fx:id="btnCreate" layoutX="14.0" layoutY="154.0" mnemonicParsing="true" prefHeight="27.0" prefWidth="75.0" text="%new.btnCreate.text" />
-            <Button fx:id="btnCancel" layoutX="102.0" layoutY="154.0" mnemonicParsing="true" text="%new.btnCancel.text" />
-            <Label layoutX="7.0" layoutY="6.0" prefHeight="68.0" prefWidth="299.0" text="%new.description.text" wrapText="true" />
-      </children>
-    </AnchorPane>
-  </children>
+<VBox prefHeight="435.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.ntak.pearlzip.ui.pub.FrmNewController">
+    <TabPane fx:id="tabsNew" tabClosingPolicy="UNAVAILABLE">
+        <Tab text="%new.tabs.general.text">
+            <AnchorPane prefHeight="425.0" prefWidth="450.0">
+                <Label layoutX="14.0" layoutY="79.0" text="%new.cmp-format.text"/>
+                <ComboBox fx:id="comboArchiveFormat" layoutX="161.0" layoutY="74.0" prefHeight="27.0"
+                          prefWidth="98.0"/>
+                <Label layoutX="7.0" layoutY="6.0" prefHeight="68.0" prefWidth="299.0"
+                       text="%new.description.text" wrapText="true"/>
+            </AnchorPane>
+        </Tab>
+    </TabPane>
+    <ButtonBar fx:id="btnBar" prefHeight="60.0" prefWidth="450.0" style="-fx-padding: 0 5 5 5;">
+        <buttons>
+          <Button fx:id="btnCreate" prefHeight="27.0" prefWidth="75.0" text="%new.btnCreate.text"/>
+          <Button fx:id="btnCancel" text="%new.btnCancel.text"/>
+        </buttons>
+    </ButtonBar>
 </VBox>
