PZ-108,PZ-133 | Zip4J Archive Provider Implementation; Error consumer to raise alerts from Archive Service Issues
PZ-108:
+ Made continue default button on password entry screen
+ Compression utilises Settings set for Zip4j

PZ-133:
+ Implemented Error consumer (EventBus subscriber)
+ Registered consumers as part of start up process
+ Raised error messages from Zip4j plugin service as appropriate
+ Refactored ProgressMessage POJO into class from record to take advantage of inheritance to provide ErrorMessage payload functionality
+ Updated logging as appropriate

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-archive-zip4j/src/main/resources/frmZip4jPassword.fxml
+++ b/pearl-zip-archive-zip4j/src/main/resources/frmZip4jPassword.fxml
@@ -15,5 +15,5 @@
           prefWidth="378.0" text="%zip4j.password.description.text" wrapText="true"/>
    <PasswordField fx:id="textPassword" layoutX="14.0" layoutY="80.0" prefHeight="27.0" prefWidth="378.0"/>
    <Button fx:id="btnContinue" contentDisplay="RIGHT" layoutX="307.0" layoutY="114.0" mnemonicParsing="false"
-           prefHeight="27.0" prefWidth="85.0" text="%zip4j.password.continue" textAlignment="RIGHT"/>
+           prefHeight="27.0" prefWidth="85.0" text="%zip4j.password.continue" textAlignment="RIGHT" defaultButton="true"/>
 </AnchorPane>
