PZ-169 | Encrypt zip archive menu option for unencrypted open zip archives
+ Extracted password validator for reuse
+ Implemented controller for encryption dialog functionality
+ Menu functionality implemented for encrypt archive
+ Added options for default encryption settings
+ Added FXForm for the Zip4J Write Service to provide encrypt archive functionality

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/src/main/resources/frmZip4jPassword.fxml
+++ b/src/main/resources/frmZip4jPassword.fxml
@@ -9,11 +9,9 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="panePassword" prefHeight="155.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/17.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
-   <Label fx:id="lblPasswordDescription" alignment="TOP_LEFT" layoutX="14.0" layoutY="14.0" prefHeight="58.0"
-          prefWidth="378.0" text="%zip4j.password.description.text" wrapText="true"/>
-   <PasswordField fx:id="textPassword" layoutX="14.0" layoutY="80.0" prefHeight="27.0" prefWidth="378.0"/>
-   <Button fx:id="btnContinue" contentDisplay="RIGHT" layoutX="307.0" layoutY="114.0" mnemonicParsing="false"
-           prefHeight="27.0" prefWidth="85.0" text="%zip4j.password.continue" textAlignment="RIGHT" defaultButton="true"/>
+<AnchorPane fx:id="panePassword" prefHeight="139.0" prefWidth="403.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <Label fx:id="lblPasswordDescription" alignment="TOP_LEFT" layoutX="14.0" layoutY="8.0" prefHeight="54.0" prefWidth="378.0" text="%zip4j.password.description.text" wrapText="true" />
+   <PasswordField fx:id="textPassword" layoutX="13.0" layoutY="67.0" prefHeight="27.0" prefWidth="378.0" />
+   <Button fx:id="btnContinue" contentDisplay="RIGHT" defaultButton="true" layoutX="306.0" layoutY="106.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="85.0" text="%zip4j.password.continue" textAlignment="RIGHT" />
+   <Button fx:id="btnCancel" contentDisplay="RIGHT" layoutX="215.0" layoutY="106.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="85.0" text="%zip4j.password.cancel" textAlignment="RIGHT" visible="false" />
 </AnchorPane>
