--- a/src/main/resources/frmZip4jOptions.fxml
+++ b/src/main/resources/frmZip4jOptions.fxml
@@ -8,14 +8,14 @@
   ~ Copyright © 2021 92AK
   -->
 
-<AnchorPane fx:id="paneZip4jOptions" prefHeight="315.0" prefWidth="428.0" xmlns="http://javafx.com/javafx/17.0.1"
-            xmlns:fx="http://javafx.com/fxml/1">
-   <Label fx:id="lblDescription" alignment="TOP_LEFT" layoutX="7.0" layoutY="6.0" prefHeight="64.0" prefWidth="413.0"
-          text="%zip4j.options.description.text" wrapText="true"/>
-   <Label fx:id="lblDefaultCompressionLevel" layoutX="7.0" layoutY="126.0" prefHeight="17.0" prefWidth="199.0"
-          text="%zip4j.options.default-compression-level.text"/>
-   <ComboBox fx:id="comboDefaultCompressionLevel" layoutX="213.0" layoutY="121.0" prefHeight="27.0" prefWidth="174.0"/>
-   <Label fx:id="lblDefaultCompressionMethod" layoutX="7.0" layoutY="92.0" prefHeight="17.0" prefWidth="199.0"
-          text="%zip4j.options.default-compression-method.text"/>
-   <ComboBox fx:id="comboDefaultCompressionMethod" layoutX="213.0" layoutY="87.0" prefHeight="27.0" prefWidth="174.0"/>
+<AnchorPane fx:id="paneZip4jOptions" prefHeight="315.0" prefWidth="428.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <Label fx:id="lblDescription" alignment="TOP_LEFT" layoutX="7.0" layoutY="6.0" prefHeight="64.0" prefWidth="413.0" text="%zip4j.options.description.text" wrapText="true" />
+   <Label fx:id="lblDefaultCompressionLevel" layoutX="7.0" layoutY="126.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-compression-level.text" />
+   <ComboBox fx:id="comboDefaultCompressionLevel" layoutX="213.0" layoutY="121.0" prefHeight="27.0" prefWidth="174.0" />
+   <Label fx:id="lblDefaultCompressionMethod" layoutX="7.0" layoutY="92.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-compression-method.text" />
+   <ComboBox fx:id="comboDefaultCompressionMethod" layoutX="213.0" layoutY="87.0" prefHeight="27.0" prefWidth="174.0" />
+   <Label fx:id="lblDefaultEncryptionStrength" layoutX="7.0" layoutY="212.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-encryption-strength.text" />
+   <ComboBox fx:id="comboDefaultEncryptionStrength" layoutX="213.0" layoutY="207.0" prefHeight="27.0" prefWidth="174.0" />
+   <Label fx:id="lblDefaultEncryptionMethod" layoutX="7.0" layoutY="178.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-encryption-method.text" />
+   <ComboBox fx:id="comboDefaultEncryptionMethod" layoutX="213.0" layoutY="173.0" prefHeight="27.0" prefWidth="174.0" />
 </AnchorPane>
