--- a/src/main/resources/frmZip4jOptions.fxml
+++ b/src/main/resources/frmZip4jOptions.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <!--
@@ -18,4 +19,6 @@
    <ComboBox fx:id="comboDefaultEncryptionStrength" layoutX="213.0" layoutY="207.0" prefHeight="27.0" prefWidth="174.0" />
    <Label fx:id="lblDefaultEncryptionMethod" layoutX="7.0" layoutY="178.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-encryption-method.text" />
    <ComboBox fx:id="comboDefaultEncryptionMethod" layoutX="213.0" layoutY="173.0" prefHeight="27.0" prefWidth="174.0" />
+   <Label fx:id="lblDefaultSplitArchiveSize" layoutX="7.0" layoutY="267.0" prefHeight="17.0" prefWidth="199.0" text="%zip4j.options.default-split-archive-size.text" />
+   <TextField fx:id="textDefaultSplitArchiveSize" layoutX="213.0" layoutY="263.0" prefHeight="27.0" prefWidth="174.0" />
 </AnchorPane>
